fix X scrolling on iphone

--- a/css/main-page-blocks/header.css
+++ b/css/main-page-blocks/header.css
@@ -144,7 +144,7 @@
         justify-content: flex-end;
     }
 
-   /* .header__nav-list {
+   .header__nav-list {
         flex-direction: column;
         position: absolute;
         left: 0;
@@ -162,22 +162,6 @@
     .header__nav-list.open {
         opacity: 1;
         pointer-events: auto;
-    }*/
-    .header__nav-list {
-        flex-direction: column;
-        position: absolute;
-        right: -150%;
-        top: 0;
-        z-index: 100;
-        background-color: #FFFFFF;
-        transition: right 0.3s ease-out;
-        padding: 30px 0;
-        margin-top: -1px;
-        border-radius: 0px 0px 20px 20px;
-    }
-
-    .header__nav-list.open {
-        right: 0;
     }
 
     .header__tel {
